Updated technology cards to use inline-block instead of overflow: auto to avoid scroll bar appearance.

--- a/drupal/sites/default/themes/ttctheme/src/scss/modules/_available_technologies_block.scss
+++ b/drupal/sites/default/themes/ttctheme/src/scss/modules/_available_technologies_block.scss
@@ -2,7 +2,8 @@
   &__block {
     @include product-type-card('dark');
 
-    overflow:auto
+    display: inline-block;
+    width: 100%;
   }
 
 }
